# discord-agents

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO_react_fastapi_template.md  a2as.yaml  alembic.ini  check_db_schema.py  entrypoint.sh  manage.py  migrate.py  mypy.ini  pyproject.toml  start.py  start_concurrent.py  start_dev.py  start_docker.py  start_prod.py  supervisord.conf
alembic/: env.py
alembic/versions/: 2e5f176bd178_initial_migration_existing_database_.py  4d99beca71c2_add_token_usage_tracking_table.py
data/: tools.yaml
discord_agents/: app.py  celery_app.py  env.py  fastapi_main.py  main.py  worker.py
discord_agents/api/: __init__.py  admin.py  auth.py  bots.py  health.py  token_usage.py
discord_agents/cogs/: base_cog.py
discord_agents/core/: config.py  database.py  migration.py  security.py
discord_agents/domain/: agent.py  bot.py  bot_config.py  models.py  tools.py
discord_agents/domain/tool_def/: content_extractor_tool.py  life_env_tool.py  math_tool.py  note_tool.py  note_wrapper_tool.py  rpg_dice_tool.py  search_tool.py  summarizer_tool.py
discord_agents/models/: bot.py
discord_agents/scheduler/: __init__.py  bot_runner.py  bot_worker.py  broker.py  channel_queue_router.py  helpers.py  note_broker_service.py  service.py  tasks.py  worker.py
discord_agents/schemas/: __init__.py  bot.py  token_usage.py
discord_agents/services/: bot_service.py  token_usage_service.py
discord_agents/utils/: auth.py  call_agent.py  logger.py
discord_agents/view/: bot_config_view.py  bot_manage_view.py  bot_view.py  management_view.py  runner_view.py
discord_agents/view/templates/admin/: bot_manage.html  bot_management.html
docs/plans/: 2026-02-09-project-architecture-refactor.md
docs/refactor/: python-3-14-upgrade.md  single-instance-multi-queue.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentEditDialog.tsx  BotEditDialog.tsx  BotQueueCell.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useBotQueues.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AgentManagement.tsx  BotManagement.tsx  Dashboard.tsx  Login.tsx  QueueMonitor.tsx  UsageAnalytics.tsx
migrations/: README  env.py
migrations/versions/: 0c040c72190a_create_notes_table.py  607e2fda5453_add_notes_table.py  b96dd8b9fff2_init.py
prompts/: README.md  snapshot.md
scripts/: runtime_matrix.sh
tests/: test_clear_sessions.py  test_content_extractor_tool.py  test_e2e.py  test_e2e_flask_legacy.py.bak  test_fastapi.py  test_fastapi_simple.py  test_token_usage_api.py  test_tools.py
tests/runtime/: test_python_runtime_guard.py
tests/scheduler/: test_channel_queue_router.py
