[project]
name = "discord-agents"
version = "0.1.0"
description = "Discord Agents"
requires-python = ">=3.13"
dependencies = [
    "discord.py",
    "flask",
    "flask-admin",
    "flask-sqlalchemy",
    "gunicorn",
    "uvicorn",
    "google-cloud-aiplatform",
    "google-genai",
    "psycopg2-binary", # PostgreSQL 驅動
    "types-flask-sqlalchemy",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.1.0",
    "google-adk[vertexai]>=0.5.0",
    "asgiref>=3.7.0",
    "langchain-community>=0.3.24",
    "flask-apscheduler>=1.13.1",
    "pytz>=2025.2",
    "redis>=6.1.0",
    "redlock-py>=1.0.8",
    "supervisor>=4.2.5",
    "litellm>=1.70.2",
    "flask-migrate>=4.1.0",
    "result>=0.17.0",
    "tiktoken>=0.9.0",
    "crawl4ai>=0.6.3",
    "playwright>=1.52.0",
    "numexpr>=2.10.2",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest-asyncio>=1.0.0",
    "types-psycopg2>=2.9.21.20250516",
    "types-pytz>=2025.2.0.20250516",
    "types-redis>=4.6.0.20241004",
    "types-wtforms>=3.2.1.20250602",
]
