[project]
name = "fastapi-react-starter"
version = "0.1.0"
description = "FastAPI React Starter with Agent System"
requires-python = ">=3.13"
dependencies = [
    # FastAPI stack
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",

    # FastAPI-Users for authentication
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastapi-users-db-sqlalchemy>=6.0.0",

    # Database drivers
    "psycopg2-binary", # PostgreSQL driver
    "python-dotenv>=1.1.0",

    # Scheduling and task management (replaces Redis)
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",  # Rate limiting

    # Core dependencies
    "asgiref>=3.7.0",
    "pytz>=2025.2",
    "result>=0.17.0",
    "tiktoken>=0.9.0",
    "pytest>=8.4.0",

    # Optional AI/LLM support (can be extended)
    "litellm>=1.70.2",

    # Web scraping capabilities (optional)
    "crawl4ai>=0.6.3",
    "playwright>=1.52.0",
    "numexpr>=2.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:Deprecated call to.*declare_namespace:DeprecationWarning",
    "ignore:parameter 'timeout' of type 'float' is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest-asyncio>=1.0.0",
    "types-psycopg2>=2.9.21.20250516",
    "types-pytz>=2025.2.0.20250516",
    "httpx>=0.25.0",  # For testing
]
